examples/bookstore/kubernetes-manifests/contour/50-contour-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookthief-v3
  namespace: bookthief
  labels:
    app: bookthief-v3-ingress
spec:
  rules:
  - host: "bookthief.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookthief-v3
            port:
              number: 14001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookbuyer-v3
  namespace: bookbuyer
  labels:
    app: bookbuyer-v3-ingress
spec:
  rules:
  - host: "bookbuyer.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookbuyer-v3
            port:
              number: 14001
